--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "tslint": "^5.11.0",
+    "codelyzer": "^4.5.0",
     "@types/node": "^10.11.6",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
