--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^6.1.9",
     "circular-dependency-plugin": "^5.0.2",
     "core-js": "^2.5.7",
+    "ng-pick-datetime": "^7.0.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
