--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "circular-dependency-plugin": "^5.0.2",
     "core-js": "^2.5.7",
     "ng-pick-datetime": "^7.0.0",
+    "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
