add check for token exp time

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "^6.1.9",
     "@angular/platform-browser-dynamic": "^6.1.9",
     "@angular/router": "^6.1.9",
+    "@types/jwt-decode": "^2.2.1",
     "circular-dependency-plugin": "^5.0.2",
     "core-js": "^2.5.7",
+    "jwt-decode": "^2.2.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.3.3",
