--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "app \"Tasks\", front end part",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 4200 --open",
-    "startDev": "webpack-dev-server --port 4200 --open --config webpack.dev.js",
+    "startDev": "webpack --config webpack.dev.js --inline --progress --port 4200 --open",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
